# angr-data

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
angr_data/: __init__.py
angr_data/_pyinstaller/: __init__.py  hook-angr_data.py
