[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "angr-data"
description = "Data files (function and type prototype definitions) for angr, released as a separate package so they do not bloat every angr release"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://angr.io/"
Repository = "https://github.com/angr/angr-data"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
angr_data = ["py.typed", "**/*.json"]

[tool.setuptools.dynamic]
version = { attr = "angr_data.__version__" }
